; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/nat64/extr_nat64stl_control.c_export_config_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/nat64/extr_nat64stl_control.c_export_config_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.namedobj_instance = type { i32 }
%struct.named_object = type { i32 }
%struct.nat64stl_dump_arg = type { i32, i32 }
%struct.nat64stl_cfg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.namedobj_instance*, %struct.named_object*, i8*)* @export_config_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @export_config_cb(%struct.namedobj_instance* %0, %struct.named_object* %1, i8* %2) #0 {
  %4 = alloca %struct.namedobj_instance*, align 8
  %5 = alloca %struct.named_object*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.nat64stl_dump_arg*, align 8
  %8 = alloca i32*, align 8
  store %struct.namedobj_instance* %0, %struct.namedobj_instance** %4, align 8
  store %struct.named_object* %1, %struct.named_object** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.nat64stl_dump_arg*
  store %struct.nat64stl_dump_arg* %10, %struct.nat64stl_dump_arg** %7, align 8
  %11 = load %struct.nat64stl_dump_arg*, %struct.nat64stl_dump_arg** %7, align 8
  %12 = getelementptr inbounds %struct.nat64stl_dump_arg, %struct.nat64stl_dump_arg* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @ipfw_get_sopt_space(i32 %13, i32 4)
  %15 = inttoptr i64 %14 to i32*
  store i32* %15, i32** %8, align 8
  %16 = load %struct.nat64stl_dump_arg*, %struct.nat64stl_dump_arg** %7, align 8
  %17 = getelementptr inbounds %struct.nat64stl_dump_arg, %struct.nat64stl_dump_arg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.named_object*, %struct.named_object** %5, align 8
  %20 = bitcast %struct.named_object* %19 to %struct.nat64stl_cfg*
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @nat64stl_export_config(i32 %18, %struct.nat64stl_cfg* %20, i32* %21)
  ret i32 0
}

declare dso_local i64 @ipfw_get_sopt_space(i32, i32) #1

declare dso_local i32 @nat64stl_export_config(i32, %struct.nat64stl_cfg*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
